--- a/frontend/src/features/toolbar/presentation/Toolbar.module.scss
+++ b/frontend/src/features/toolbar/presentation/Toolbar.module.scss
@@ -520,6 +520,12 @@
   }
 }
 
+.toolbarEditorPie.toolbarMergedWithCenter {
+  .toolbarKey {
+    background-color: #fff;
+  }
+}
+
 .toolbarRightSidebar {
   flex-direction: column;
   align-items: center;
